--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 packaging==23.2
 plotly==5.18.0
+psycopg2-binary==2.9.9
 tenacity==8.2.3
 typing_extensions==4.8.0
 Werkzeug==3.0.1
